# Design_Patterns

./: CMakeLists.txt  README.md
observer/: main.cpp  observer.cpp  observer.h  subject.cpp  subject.h
prototype/: main.cpp  prototype.cpp  prototype.h
startegy/: context.cpp  context.h  main.cpp  node.h  startegy.h
syncBarrier/: syncBarrier.cpp
threadSync/: threadSync.cpp
visitor/: component.h  main.cpp  visitor.cpp  visitor.h
